# Sieci-Neuronowe

./: CMakeLists.txt  Metoda gradientu.cpp  Metoda gradientu.h  Model McCullocha-Pittsa.cpp  Model McCullocha-Pittsa.h  Model asocjacji.cpp  Model asocjacji.h  Perceptron.cpp  Perceptron.h  Propagacja wsteczna.cpp  Propagacja wsteczna.h  README.md  Sieci Hopfielda.cpp  Sieci Hopfielda.h  faktoryzacja.cpp  faktoryzacja.h  header.h  logo.cpp  main.cpp  menu.cpp
SNE/: Makefile.win  Maszyna Baltzmana.cpp  Maszyna Baltzmana.h  Metoda gradientu.cpp  Metoda gradientu.h  Model McCullocha-Pittsa.cpp  Model McCullocha-Pittsa.h  Model asocjacji.cpp  Model asocjacji.h  Perceptron.cpp  Perceptron.h  Propagacja wsteczna.cpp  Propagacja wsteczna.h  SNE.dev  SNE.layout  Sieci Hopfielda.cpp  Sieci Hopfielda.h  faktoryzacja.cpp  faktoryzacja.h  header.h  logo.cpp  main.cpp  menu.cpp
gotowce w c#/SNE_01/: SNE_01.sln
gotowce w c#/SNE_02/: SNE_02.sln
gotowce w c#/SNE_03/: SNE_03.sln
gotowce w c#/SNE_04/: SNE_04.sln
gotowce w c#/SNE_05_unfinished/: SNE_05.sln
gotowce w c#/SNE_06_unfinished/: SNE_06.sln
gotowce w c++/Ćw4/: Makefile.win  gradient.dev  gradient.layout  main.cpp
gotowce w c++/ćw 6/: Makefile.win  hopfield.layout  main.cpp
gotowce w c++/ćw 7/: hopfield.dev  hopfield.layout  main.cpp
gotowce w c++/ćw1/: Makefile.win  Neurony1.dev  Neurony1.layout  main.cpp
gotowce w c++/ćw2/: Makefile.win  Perceptron.dev  Perceptron.layout  main.cpp
gotowce w c++/ćw3/: Makefile.win  main.cpp  neurony 3.dev  neurony 3.layout
gotowce w c++/ćw8/: Makefile.win  main.cpp  (+2 more)
(+22 files in other folders)
